--- a/styles.css
+++ b/styles.css
@@ -86,3 +86,15 @@ body {
 .container.active #map {
     margin-left: 20%;
 }
+
+/* Popup styling */
+img {
+    display: flex;
+    max-width: 200px;
+    max-height: 300px;
+    margin: 10px
+}
+
+.popup {
+    padding-bottom: 20px;
+}
