Added exchange icon data and code to include icons I added exchange icon to the image files, also added a part into the code where it checks if it needs to include the .svg in the popup. Added info when hovering to every icon except modes (probably removing modes soon, seems useless). Made changes to some classes.

--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ h3 {
 
 /**/
   
-.boxes .boxes-info {
+.svg-with-info .svg-info {
     visibility: hidden;
     opacity: 0;
     width: 120px;
@@ -127,16 +127,14 @@ h3 {
     text-align: center;
     padding: 5px 0;
     position: absolute;
-    left: -100px;
+    left: -70px;
     bottom: 10em;
     z-index: 1;
     margin-left: -60px;
     background-color:white;
-    transition: opacity 1s;
-
   }
   
-.boxes:hover .boxes-info {
+.svg-with-info:hover .svg-info {
     visibility: visible;
     opacity: 1;
   }
