--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+* {
+    font-family: 'Roboto', sans-serif;
+    color: #312f2f;
+}
+
 html,
 body {
     padding: 0;
@@ -15,7 +20,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 20%;
+    width: 30%;
     height: 100%;
     background-color: #afafaf;
     transform: translateX(-100%);
@@ -60,7 +65,7 @@ body {
 }
 
 .container.active #sidebar-toggle {
-    left: 20%;
+    left: 30%;
 }
 
 #sidebar-close {
